--- a/01-Eleventy-2/01-damska-moda/index.html
+++ b/01-Eleventy-2/01-damska-moda/index.html
@@ -1,5 +1,5 @@
 ---
-layout: sablona.njk
+layout: layouts/sablona-s-reklamou.njk
 title: Dámská móda
 ---
 
@@ -8,7 +8,7 @@ title: Dámská móda
 <p>Rádi tě vidíme na naší stránce s dámskou módou. Máme ten nejlepší výběr na světě, protože prodáváme trička <strong>a k tomu ještě</strong> boty! U nás se prostě oblečeš od hlavy až k patě. Máme také příznivé ceny, protože všechna naše trička se dají pořídit pod deset tisíc za kus a botičky nestojí víc jednu nebo dvě ledviny.</p>
 
 <img class="image image--left" src="/images/uvod.jpg" alt="Módní paní">
-
+ 
 <p>Earum modi ea delectus veritatis, aut obcaecati placeat cupiditate molestias tempore hic atque voluptates quis vitae neque unde velit ullam!</p>
 
 <p>Magni placeat esse nemo quia aperiam odio. Eveniet optio, illum ullam, autem, culpa architecto doloribus error explicabo voluptatibus nam ex!</p>
