--- a/01-Eleventy-2/01-damska-moda/boty/trpytive.html
+++ b/01-Eleventy-2/01-damska-moda/boty/trpytive.html
@@ -1,5 +1,5 @@
 ---
-layout: sablona.njk
+layout: layouts/sablona.njk
 title: Třpytivé boty
 ---
 
@@ -12,6 +12,10 @@ title: Třpytivé boty
 		<h1>Třpytivé boty</h1>
 
 		<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, cupiditate?</p>
+
+		<div class="info">
+			Na toto zboží poskytujeme prodlouženou záruku, protože není skladem a nikdo si ho nemůže dovolit. Hahaha
+		</div>
 
 		<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio nobis, dolorum rerum iste ratione repellendus totam ad officia earum enim saepe laudantium impedit, ipsum accusamus nulla vitae, et odio veritatis!</p>
 
